created place order form in place_order.html file and getAddress and sendMail js files and added styles for form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,4 +130,9 @@ body {
     }
 }
 
-
+/*------------Place order------------------*/
+.form {
+    margin: 5% 20%;
+    padding: 10px;
+    background-color: grey;
+}
