--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,8 @@ body {
     padding: 0;
     background: transparent;
     font-family: 'Akaya Telivigala', cursive, sans-serif;
-    font-size: 24px;  
+    font-size: 20px;  
+    color: navy;
 }
 /*------title and nav bar styles----------------------*/
 .navbar {
@@ -33,7 +34,8 @@ body {
     color: white;
     word-wrap: none!important;
     border: 0;
-    margin-left: 5px!important;
+    margin-left: 10px!important;
+    margin-right: -5px;
 }
 .logo {
     margin-left: 10px;
@@ -43,11 +45,18 @@ body {
     font-weight: 700;
     
 }
+.navbar-toggler {
+    border: none;
+    
+}
 .toggler-btn {
     margin-right: 10px;
     padding-left: 10px;
-    margin-left: 30px;
     
+    
+}
+.toggler-nav {
+    text-align: right;
 }
 .toggler-btn i {
     color: navy!important;
@@ -65,8 +74,14 @@ body {
     color: navy!important;
 }
 .active,.nav-link:hover  {
-    
     text-decoration-line: underline;
+}
+.btn-order:hover {
+    transform: scale(1.25); /* reference w3schools*/
+    transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+    color: var(--white);
 }
 .nav-menu {
     width: 60px;
@@ -75,27 +90,28 @@ body {
 /*---------media queries for nav bar----------*/
 @media (min-width: 320px) {
     .toggler-btn {
-    padding-left: 50px;
+    margin-left: 30px;
     }
 }
 @media (min-width: 360px) {
     .toggler-btn {
-    padding-left: 80px;
+    margin-left: 80px;
     }
+    
 }
 @media (min-width: 375px) {
     .toggler-btn {
-    padding-left: 100px;
+    margin-left: 100px;
     }
 }
 @media (min-width: 411px) {
     .toggler-btn {
-    padding-left: 120px;
+    margin-left: 120px;
     }
 }
 @media (min-width: 540px) {
     .toggler-btn {
-    padding-left: 240px;
+    margin-left: 240px;
     }
 }
 
@@ -124,7 +140,8 @@ body {
     
 /*------------------Schedule-------------------------------*/
 .schedule {
-    background-color: #e9ecef;
+    background-color: #fae1c9;
+    /*#e9ecef;*/
     padding-bottom: 20px;
     
 }
@@ -173,6 +190,7 @@ body {
     
     font-size: 18px;
     color: black;
+    text-align: center;
     
 }
 
@@ -187,6 +205,7 @@ body {
 /*---------------location---------------------------*/
 #Google_map_location {
     background-color: #c9deba;
+     /*#c9deba;*/
     margin: 5px;
     
 }
@@ -253,28 +272,97 @@ body {
 
 /*------------Place order------------------*/
 #place_order {
-    margin: 20px 10px;
+    margin: 50px 10px;
     padding: 10px;
     background-color: #fae1c9 ;
 }
-.btn-success {
-    margin-left:100px;
-}
 
+.form-btn {
+    text-align: center;
+}
+.btn-form {
+    background-color: #ff8b36;
+    
+}
+#acknowledgement {
+    align-items: center;
+}
 #acknowledgement h2,h3 {
     text-align: center;
     margin: 20px;
 }
 #acknowledgement img {
-    height: 500px;
-    width: 500px;
-    margin-left: 20%;
-    margin-right: 20%;
     text-align: center;
 
 }
 .ack-schedule {
     text-decoration: none;
+}
+/*----------media queries for place order---------*/
+@media (min-width:540px) {
+    #place_order {
+    margin: 50px 50px;
+    }
+}
+@media (min-width:1024px) {
+    #place_order {
+    margin: 50px 90px;
+    }
+}
+@media (min-width:1024px) {
+    #place_order {
+    margin: 70px 150px;
+    }
+}
+/*---------media queries for acknowledgement-----------------*/
+@media (min-width: 280px) {
+    #acknowledgement img {
+        margin-left: 10px;
+       
+    }
+}
+@media (min-width: 320px) {
+    #acknowledgement img {
+        margin-left: 30px;
+       
+    }
+}
+
+@media (min-width: 360px) {
+    #acknowledgement img {
+        margin-left: 50px;
+       
+    }
+}
+@media (min-width: 411px) {
+    #acknowledgement img {
+        margin-left: 70px;
+       
+    }
+}
+@media (min-width: 540px) {
+    #acknowledgement img {
+        margin-left: 130px;
+       
+    }
+}
+@media (min-width: 768px) {
+    #acknowledgement img {
+        margin-left: 230px;
+       
+    }
+}
+@media (min-width: 1024px) {
+    #acknowledgement img {
+        margin-left: 350px;
+       
+    }
+}
+@media (min-width: 1200px) {
+    #acknowledgement img {
+        margin-left: 600px;
+       
+    }
 }
 /*----------footer--------------------*/
 .footer {
