--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,8 +134,8 @@ body {
     margin-top: 20px;
     color: navy;
 }
-.carousel-control-next, .carousel-control-prev {
-    color: black!important;
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    background-color: navy;
 }
     
 /*------------------Schedule-------------------------------*/
@@ -167,7 +167,7 @@ body {
 }
 
 .schedule_table tr:hover {
-    background-color: #ddd;
+    background-color: #e8a908;;
 }
 
 .schedule_table th {
@@ -199,7 +199,7 @@ body {
     text-align: center;
 }
 #schedule span {
-    padding-left: 15px;
+    margin-right: -20px;
 }
 
 /*---------------location---------------------------*/
