--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,6 +259,8 @@ body {
 
 .card {
     background-color: #bbdc8b;
+    padding: 5px;
+    margin: 5px;
 }
 .card-title {
     text-align: center;
@@ -297,7 +299,13 @@ body {
     #schedule-rtable {
         display: none;
     }
-    #map-info {
+    #Google_map_location {
+    height: 900px;
+    
+}
+}
+@media only screen and (min-width: 1024px) {
+     #map-info {
     margin-top: 125px;
     
 }
