--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,8 @@ body {
     font-family: 'Akaya Telivigala', cursive, sans-serif;
     font-size: 20px;  
     color: navy!important;
+    
+    
 }
 /*------title and nav bar styles----------------------*/
 .navbar {
@@ -148,6 +150,9 @@ body {
 
 .carousel-image {
     height: 600px;
+    
+    
+    
 }
 .carousel-caption i {
     font-size: 150px;
@@ -166,24 +171,27 @@ body {
     
 /*------------------Schedule-------------------------------*/
 /*------------------code reference w3schools------------------------------*/
-.schedule {
+.schedule-container {
     background-color: #ffffff;
-    /*#e9ecef;*/
-    padding-bottom: 20px;
-    
+    margin: 20px;
+      
 }
 #schedule-header {
     text-align: center;
-    margin: 5px;
+    margin: 10px;
+    padding: 10px;
 }
 .schedule_table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  padding: 10px;
+  margin: 10px;
+  
 }
 
 .schedule_table td, #schedule_table th {
-  border: 1px solid #ddd;
+  /*border: 1px solid #ddd;*/
   padding: 8px;
   text-align: center;
   
@@ -194,7 +202,7 @@ body {
 }
 
 .schedule_table tr:hover {
-    background-color: gainsboro;
+    background-color: #ace484;
 }
 
 .schedule_table th {
@@ -212,6 +220,8 @@ body {
 }
 #scheduleaccordion {
     text-align: center;
+    margin: 20px;
+    
 }
 #scheduleaccordion p {
     
@@ -233,9 +243,8 @@ body {
     background-color: navy;
     color: white;
 }
-/*#schedule span {
-    margin-right: -20px;
-}*/
+/*--------media queries for schedule-------*/
+
 
 /*---------------location---------------------------*/
 #Google_map_location {
