aded newline feature to grocery list in addItem.js and added styles to add item button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,6 +344,9 @@ body {
 .form-btn {
     text-align: center;
 }
+.btn-add {
+    margin-top: 40px;
+}
 .btn-form {
     background-color: #ff8b36;
     
