--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ body {
 
 .schedule-container {
     background-color: #ffffff; /*code reference w3schools*/
-    
+    color: darkgreen;
       
 }
 #schedule-header {
@@ -189,7 +189,10 @@ body {
   margin: 10px;
   
 }
-
+.truck {
+    display: inline-block;
+    padding-left: 30px;
+}
 .schedule_table td, #schedule_table th {
   /*border: 1px solid #ddd;*/
   padding: 8px;
@@ -215,8 +218,13 @@ body {
 
 .today {
     
-  color: blue;
+  color: darkgreen;
+  
     
+}
+.today td {
+    font-size: 20px;
+    font-weight: 700;
 }
 #scheduleaccordion {
     text-align: center;
