--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ body {
     
 }
 .carousel_caption3 {
-    top: 160px!important;
+    top: 130px!important;
 }
 .carousel-item {
     border: 0;
@@ -262,7 +262,7 @@ body {
 }
 #scheduleaccordion p {
     
-    font-size: 18px;
+    font-size: 20px;
     color: navy;
     text-align: center;
     
@@ -274,6 +274,7 @@ body {
 .weekdaybtn {
     color: navy;
     text-align: center;
+    font-size: x-large;
     
 }
 .btn-address {
@@ -287,8 +288,17 @@ body {
     background-color: navy!important;
     color: white!important;
 }
-
-
+@media (min-width: 375px) and (max-width: 540px) {
+    #schedule-header {
+    font-size: 22px;
+    }
+    .weekday h2 {
+        font-size: 22px;
+    }
+    #scheduleaccordion p {
+        font-size: 22px;
+    }
+}
 /*---------------accordion styles-----------------*/
 
 
@@ -331,6 +341,10 @@ body {
 }
 .location-header h2,p {
     text-align: center;
+    
+}
+.location-header p {
+    font-size: 22px;
     
 }
 #map {
@@ -487,7 +501,7 @@ body {
 .footer {
 background-color: #212529;
     color: #ff8b36;
-    font-size: 14px;
+    font-size: 16px;
 }
 .footer-contact {
     text-align: left;
@@ -501,6 +515,9 @@ background-color: #212529;
 .list-inline-item a {
     color: #ff8b36;
     
+}
+.social-links li {
+    margin: 0 20px;
 }
 /*---------media queries for footer----------*/
 @media (min-width: 280px) and (max-width: 360px) {
@@ -524,6 +541,7 @@ background-color: #212529;
 @media (min-width: 320px) {
     .footer-ul {
         margin-left: 15px;
+        font-size: 24px;
     }
 }
 @media (min-width: 360px) {
@@ -556,6 +574,7 @@ background-color: #212529;
         font-size: 18px;
     }
 }
+
 @media (min-width: 768px) and (max-width: 1023px) {
     .col-footer h5 {
         font-size: 34px;
@@ -594,11 +613,18 @@ background-color: #212529;
 /*-------------close btn-------------*/
 .inputlist {
     cursor: pointer;
-  position: relative;
-  padding: 12px 8px 12px 40px;
-  margin: 10px;
+    position: relative;
+    margin: 10px;
 }
-
+#orderForm {
+    font-size: large;
+}
+.form-group {
+    font-size: 20px;
+}
+.form-control {
+    font-size: 1.25rem;
+}
 .delete {
     margin-left: 20px;
     background-color: #6da13c;
@@ -610,4 +636,9 @@ background-color: #212529;
 
 #groceryList {
     height: auto;
+}
+@media (max-width: 280px) {
+.form-header {
+    font-size: 18px;
+}
 }
