--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,48 @@ body {
     margin-left: 240px;
     }
 }
-
+@media (min-width: 768px) {
+    .toggler-btn i {
+        font-size: 50px;
+    }
+    .navbar-item a {
+    font-size: 32px;
+    }
+    .brandname {
+        font-size: 60px;
+    }
+    .btn-order {
+        font-size: x-large;   
+    }
+}
+    
+   
+@media (min-width: 1024px) {
+    .navbar-item a {
+    font-size: 22px;
+    }
+    .brandname {
+        font-size: 50px;
+    }
+    .btn-order {
+        font-size: x-large;   
+    }
+    .carousel_caption2 h3 {
+        margin-top: 0;
+    }
+    .carousel-caption h3 {
+        font-size: 50px;
+    }
+    .jumbotron-btn {
+        font-size: xx-large;
+    }
+    #schedule-header h2 {
+        font-size: 50px;
+    }
+    #schedule-header p {
+        font-size: 34px;
+    }
+}
 
 /*------------------------carousel------------------------------*/
 
@@ -179,6 +220,18 @@ body {
 @media (max-width: 540px) {
     .carousel-caption h2 {
         margin-top: 75px;
+    }
+}
+@media (min-width: 768px) {
+    .carousel_caption2 h3 {
+        font-size: 40px;
+    }
+    .carousel-caption h3 {
+        font-size: 40px;
+        top: -50px!important
+    }
+    .jumbotron-btn {
+        font-size: xx-large;
     }
 }
     
@@ -302,8 +355,8 @@ body {
 /*---------------accordion styles-----------------*/
 
 
-/*show accordion only for small screens and hide them for bigger and medium screen */
-@media only screen and (max-width: 540px) { 
+/*show accordion only for small and medium screens and hide them for bigger and medium screen */
+@media only screen and (max-width: 768px) { 
     #schedule-rtable {
         display: block;
     }
@@ -312,8 +365,8 @@ body {
     }
    
 }
-/*show table only for medium and large screens and hide them for smaller screens */
-@media only screen and (min-width: 768px) {
+/*show table only for large screens and hide them for smaller screens */
+@media only screen and (min-width: 1024px) {
     #schedule-table {
         display: block;
     }
@@ -321,6 +374,27 @@ body {
         display: none;
     }
     
+}
+@media (min-width: 768px) {
+    #schedule-header h2 {
+        font-size: 50px;
+    }
+    #schedule-header p {
+        font-size: 34px;
+    }
+    
+    .weekdaybtn {
+        font-size: xx-large!important;  
+    }
+    .card {
+        margin: 10px 50px!important;
+    }
+    .btn-address {
+        font-size: 36px;
+    }
+    #scheduleaccordion p {
+        font-size: 36px!important;
+    }
 }
 
 /*---------------location---------------------------*/
@@ -382,16 +456,21 @@ body {
         display: none;
 }
 }
-/*@media (min-width: 768px) {
-#Google_map_location {
-    height: 900px;
+@media (min-width: 768px) {
+ .location-header h2 {
+        font-size: 50px;
+    }
+    .location-header p {
+        font-size: 36px;
+    }
+    .card-info img {
+        padding-left: 150px;
+    }
+    .location p {
+        font-size: 30px;
     }
 }
-@media (min-width: 1024px) {
-#Google_map_location {
-    height: 700px;
-    }
-}*/
+
 @media (min-width: 1024px) {
 #map-info {
         margin-top: 5px;   
@@ -415,6 +494,33 @@ body {
 .btn-form {
     background-color: #ff8b36;
     
+}
+.inputlist {
+    cursor: pointer;
+    position: relative;
+    margin: 10px;
+    padding: 2px;
+}
+#orderForm {
+    font-size: large;
+}
+.form-group {
+    font-size: 20px;
+}
+.form-control {
+    font-size: 1.25rem;
+}
+.delete {
+    margin-left: 20px;
+    background-color: #6da13c;
+    color: white;
+    border: 1px solid black;
+    font-style: normal;
+    position: relative;
+}
+
+#groceryList {
+    height: auto;
 }
 #acknowledgement {
     align-items: center;
@@ -445,6 +551,14 @@ body {
 @media (min-width:1024px) {
     #place_order {
     margin: 70px 150px;
+    }
+}
+@media (max-width: 280px) {
+    .form-header {
+    font-size: 18px;
+    }
+    .inputlist {
+    font-size: medium;
     }
 }
 /*---------media queries for acknowledgement-----------------*/
@@ -610,35 +724,4 @@ background-color: #212529;
         font-size: 20px;
     }
 }
-/*-------------close btn-------------*/
-.inputlist {
-    cursor: pointer;
-    position: relative;
-    margin: 10px;
-}
-#orderForm {
-    font-size: large;
-}
-.form-group {
-    font-size: 20px;
-}
-.form-control {
-    font-size: 1.25rem;
-}
-.delete {
-    margin-left: 20px;
-    background-color: #6da13c;
-    color: white;
-    border: 1px solid black;
-    font-style: normal;
-    position: relative;
-}
 
-#groceryList {
-    height: auto;
-}
-@media (max-width: 280px) {
-.form-header {
-    font-size: 18px;
-}
-}
