--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,6 @@
 /*----------Google font----------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
 
-/*----------------CSS variables-------------------*/
-:root {
-  --orange: #ff8b36;
-  --white: #fdf9fd;
-  --black: #333541;
-}
-
 /*------------Generic styles------------------------*/
 body {
     margin: 0;
@@ -27,15 +20,15 @@ body {
 }
 .bg-navbar {
    background-color: #f16a19!important;
-   color: var(--white)!important;
+   color: #fdf9fd!important;
 }
 .navbar-brand {
     color: navy!important;
 }
 .btn-order {
     background-color: darkgreen!important;
-    color: white;
-    word-wrap: none!important;
+    color: #fdf9fd;
+   /* word-wrap: none!important;*/
     border: 0;
     /*margin-left: 10px!important;*/
     margin-right: -5px;
@@ -55,10 +48,9 @@ body {
 }
 .toggler-btn {
     margin-right: 10px;
-    padding-left: 10px;
-    
-    
+    padding-left: 10px; 
 }
+
 .toggler-nav {
     text-align: right;
 }
@@ -83,10 +75,11 @@ body {
 .btn-order:hover {
     transform: scale(1.25); /* reference w3schools*/
     transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out;
-    color: var(--white);
+   /* -moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;*/
+     
 }
+
 .nav-menu {
     width: 60px;
     padding:0;
@@ -94,12 +87,12 @@ body {
 /*---------media queries for nav bar----------*/
 @media (max-width: 280px) {
     .btn-order {
-        margin-left: -10px;
+        margin-left: -30px;
     }
 }
 @media (max-width: 320px) {
     .brandname {
-        font-size: 24px;
+        font-size: 28px;
     }
     .btn-order {
         white-space: nowrap;
@@ -113,13 +106,11 @@ body {
 @media (min-width: 360px) {
     .toggler-btn {
     margin-left: 80px;
-    }
-    
-    
+    }   
 }
 @media (min-width: 375px) {
     .toggler-btn {
-    margin-left: 100px;
+    margin-left: 80px;
     }
 }
 @media (min-width: 360px) and (max-width: 375px) {
@@ -309,7 +300,7 @@ body {
   padding-bottom: 12px;
   text-align: center;
   background-color: #6da13c;
-  color: white;
+  color: #fdf9fd;
 }
 
 .today {
@@ -318,16 +309,16 @@ body {
 
 /*---To create a blinking text- code reference-https://html-online.com/articles/blinking-text-css-animation/--- */
 
-.today td span {
+.today span {
     font-weight: 700;
      animation:blinkingText 1.2s infinite; 
 }
 @keyframes blinkingText{
-    0%{     color: darkgreen;    }
-    49%{    color: darkgreen; }
+    0%{     color: navy;    }
+    49%{    color: navy; }
     60%{    color: transparent; }
     99%{    color:transparent;  }
-    100%{   color: darkgreen;    }
+    100%{   color: navy;    }
 }
 #scheduleaccordion {
     text-align: center;
@@ -353,14 +344,14 @@ body {
 }
 .btn-address {
     background-color: navy;
-    color: white;
+    color: #fdf9fd;
 }
 #schedule-rtable {
    display: none;
 }
 .btn-address:hover {
     background-color: navy!important;
-    color: white!important;
+    color: #fdf9fd!important;
 }
 @media (min-width: 375px) and (max-width: 540px) {
     #schedule-header {
@@ -590,7 +581,7 @@ body {
 .delete {
     margin-left: 20px;
     background-color: #6da13c;
-    color: white;
+    color: #fdf9fd;
     border: 1px solid black;
     font-style: normal;
     position: relative;
@@ -617,7 +608,7 @@ body {
 }
 @media (min-width:768px) {
     .form-header {
-        font-size: xxx-large;
+        font-size: 50px;
     }
     .form-group {
         font-size: 30px;
@@ -646,7 +637,7 @@ body {
 
     }
     .form-header {
-        font-size: xx-large;
+        font-size: 40px;
     }
     .form-group {
         font-size: 24px;
@@ -784,7 +775,7 @@ background-color: #212529;
 @media (min-width: 320px) {
     .footer-ul {
         margin-left: 15px;
-        font-size: 24px;
+        font-size: 18px;
     }
 }
 @media (min-width: 360px) {
