--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,6 +282,7 @@ html, body {
   margin: 10px;
   color: darkgreen;
   
+  
 }
 .truck {
     display: inline-block;
@@ -373,6 +374,9 @@ html, body {
     }
 }
 @media (min-width: 1024px) {
+    #schedule-table {
+        width: 98%;
+    }
     .schedule-heading {
         font-size: 50px;
     }
@@ -384,6 +388,9 @@ html, body {
     }
 }
 @media (min-width: 1200px) {
+    #schedule-table {
+        width: 99%;
+    }
     .schedule-heading {
         font-size: 35px!important;
     }
@@ -745,6 +752,10 @@ background-color: #212529;
     color: #ff8b36;
     font-size: 16px;
 }
+.footer-details {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 .footer-contact {
     text-align: left;
     padding: 5px;
@@ -783,7 +794,7 @@ background-color: #212529;
 @media (min-width: 320px) {
     .footer-ul {
         margin-left: 15px;
-        font-size: 18px;
+        font-size: 16px;
     }
 }
 @media (min-width: 360px) {
@@ -865,7 +876,7 @@ background-color: #212529;
     .footer-ul {
         margin-left: 100px;
         padding-left: 70px;
-        font-size: 22px;
+        font-size: 18px;
     }
 }
 
