--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,29 +29,23 @@ html, body {
 .btn-order {
     background-color: darkgreen!important;
     color: #fdf9fd;
-   /* word-wrap: none!important;*/
     border: 0;
-    /*margin-left: 10px!important;*/
     margin-right: -5px;
     padding: 10px;
 }
 .brand {
-    margin-left: 10px;
-    
+    margin-left: 10px;   
 }
 .brandname {
-    font-weight: 700;
-    
+    font-weight: 700;   
 }
 .navbar-toggler {
     border: none;
-    
 }
 .toggler-btn {
     margin-right: 10px;
     padding-left: 10px; 
 }
-
 .toggler-nav {
     text-align: right;
 }
@@ -60,7 +54,6 @@ html, body {
     font-size: 28px;
     margin-top: 10px;
 }
-
 .navbar-item {
     margin: 5px;
     padding: 2px;
@@ -76,16 +69,17 @@ html, body {
 .btn-order:hover {
     transform: scale(1.25); /* reference w3schools*/
     transition: all .5s ease-in-out;
-   /* -moz-transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out;*/
-     
+    color: white;
+   -moz-transition: all .5s ease-in-out;
+   -webkit-transition: all .5s ease-in-out;  
 }
-
 .nav-menu {
     width: 60px;
     padding:0;
 }
+
 /*---------media queries for nav bar----------*/
+
 @media (max-width: 280px) {
     .btn-order {
         margin-left: -30px;
@@ -149,9 +143,7 @@ html, body {
     .btn-order {
         font-size: x-large;   
     }
-}
-    
-   
+}   
 @media (min-width: 1024px) {
     .navbar-item a {
     font-size: 30px;
@@ -181,8 +173,7 @@ html, body {
 
 .carousel-caption {
     top: 125px!important;
-    color: navy;
-    
+    color: navy;  
 }
 .carousel_caption3 {
     top: 130px!important;
@@ -190,12 +181,9 @@ html, body {
 .carousel-item {
     border: 0;
 }
-
 .carousel-image {
     height: 600px;
-    width: 100vh;
-    
-    
+    width: 100vh;   
 }
 .carousel-caption i {
     font-size: 150px;
@@ -205,14 +193,13 @@ html, body {
 .carousel-control-next-icon, .carousel-control-prev-icon {
     background-color: navy;
 }
+
 /*---------------media queries for carousel--------------------*/
 
 @media (max-width: 320px) {
-.carousel-caption {
+    .carousel-caption {
     top: 50px!important;
-    
-}
-
+    }
 }
 @media (max-width: 540px) {
     .carousel-caption h2 {
@@ -264,10 +251,9 @@ html, body {
     background-position-x: center;
     background-position-y: center;
     height: auto;
-    padding: 0;
+    /*padding: 0;
     margin: 0;
-    border: 0
-      
+    border: 0;*/  
 }
 #schedule-header {
     text-align: center;
@@ -281,8 +267,6 @@ html, body {
   padding: 10px;
   margin: 10px;
   color: darkgreen;
-  
-  
 }
 .truck {
     display: inline-block;
@@ -290,20 +274,15 @@ html, body {
     margin-right: -50px
 }
 .schedule_table td, #schedule_table th {
-  /*border: 1px solid #ddd;*/
   padding: 8px;
-  text-align: center;
-  
+  text-align: center;  
 }
-
 .schedule_table tr:nth-child(even){
     background-color: #c9deba;
 }
-
 .schedule_table tr:hover {
     background-color: #ace484;
 }
-
 .schedule_table th {
   padding-top: 12px;
   padding-bottom: 12px;
@@ -311,7 +290,6 @@ html, body {
   background-color: #6da13c;
   color: #fdf9fd;
 }
-
 .today {
     color: darkgreen;
 }
@@ -331,25 +309,20 @@ html, body {
 }
 #scheduleaccordion {
     text-align: center;
-    margin: 20px;
-    
+    margin: 20px; 
 }
 #scheduleaccordion p {
-    
     font-size: 20px;
     color: navy;
-    text-align: center;
-    
+    text-align: center;  
 }
 .card_accordion {
     background-color: #6da13c!important;
 }
-
 .weekdaybtn {
     color: navy;
     text-align: center;
     font-size: x-large;
-    
 }
 .btn-address {
     background-color: navy;
@@ -417,7 +390,9 @@ html, body {
     }
    
 }
+
 /*show table only for large screens and hide them for smaller screens */
+
 @media only screen and (min-width: 1024px) {
     #schedule-table {
         display: block;
@@ -600,6 +575,8 @@ html, body {
     border: 1px solid black;
     font-style: normal;
     position: relative;
+    font-family: sans-serif;
+    padding: 5px;
 }
 
 #groceryList {
@@ -614,6 +591,10 @@ html, body {
     }
     .inputlist {
     font-size: medium;
+    }
+    .delete {
+        margin-left: 10px;
+        padding: 2px;
     }
 }
 @media (min-width:540px) {
@@ -772,7 +753,9 @@ background-color: #212529;
 .social-links li {
     margin: 0 20px;
 }
+
 /*---------media queries for footer----------*/
+
 @media (min-width: 280px) and (max-width: 360px) {
     .footer-copyright {
         padding-top: 10px;
@@ -827,7 +810,6 @@ background-color: #212529;
         font-size: 18px;
     }
 }
-
 @media (min-width: 768px) and (max-width: 1023px) {
     .col-footer h5 {
         font-size: 34px;
@@ -850,7 +832,7 @@ background-color: #212529;
     .footer-ul {
         margin-left: 0;
         padding-left: 70px;
-}   
+    }   
     .col-footer {
         padding-top: 30px;
     }
@@ -870,7 +852,7 @@ background-color: #212529;
     .social-links li {
         font-size: 24px;
     }
-    }
+}
 
 @media (min-width: 1200px) {
     .footer-ul {
